# ML-Fraud-Detection-Project

./: .gitignore  EDA.ipynb  ProblemStatement.txt  README.md  model_tuning.ipynb  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
eda_outputs/: eda_summary_metrics.txt
notebooks/: DataLoad.ipynb  PreProcessing.ipynb  train_model_LR.ipynb
src/: app.py  frontend.py  predict.py  train.py
src/fraud_detection_pipeline/: __init__.py  main.py
tests/: test_sample.py
